sna: Only flags the PolyFillRect as REPLACES if it is unclipped

Otherwise we discard a fill operation that is required to initialise the
pixmap before drawing commences.

Fixes regression from
commit ef9dc6fae585d5616446eedc1e6e91173f4064c1 [2.21.7]
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon May 20 11:08:51 2013 +0100

    sna: Undo a few more overwritten operations upon a bo

Reported-by: Matti Hamalainen <ccr@tnsp.org>
Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=64841
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>